<resources>
    <string name="app_name">PrefsDemo</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="login_header">Login Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="font_header">Font Settings</string>
    <string name="backgroundcolor">Background Color</string>
    <string name="backgroundcolor_summary">Change background color</string>
    <string name="autologin">Auto Login</string>
    <string name="font_size">Font Size</string>
</resources>
